# mizpah

./: .gitignore  COVERAGE_PHASE_3B.md  Cargo.toml  Justfile  PHASE2_COVERAGE_REPORT.md  PHASE_3A_COVERAGE_SUMMARY.md  PLUGIN.md  README.md  clippy.toml  deny.toml  mcp.json
.cargo/: audit.toml
.cursor-plugin/: plugin.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/mizpah/: Cargo.toml  build.rs
crates/mizpah/formats/packs/: PIN.txt  README.md  access_log.json  activemq_log.json  airflow_log.json  akamai_log.json  alb_log.json  ansible_log.json  apparmor_log.json  auditd_log.json  auth0_log.json  aws_eventbridge_log.json  aws_kinesis_log.json  aws_sns_log.json  aws_sqs_camel_log.json  aws_sqs_log.json  aws_step_functions_log.json  azure_activity_log.json  azure_app_insights_log.json  azure_event_grid_log.json  azure_event_hubs_log.json  azure_front_door_log.json  azure_nsg_flow_log.json  azure_service_bus_log.json  bind_dns_log.json  block_log.json  bullmq_json_log.json  bullmq_log.json  bun_log.json  bunyan_log.json  caddy_log.json  candlepin_log.json  carbon_black_log.json  cassandra_log.json  cef_log.json  celery_log.json  checkpoint_log.json  chronicle_udm_log.json  cisco_asa_log.json  clickhouse_log.json  (+200 more)
crates/mizpah/src/: agent_hooks.rs  api.rs  attach.rs  browser_attach.rs  cli.rs  config.rs  error.rs  event_time.rs  file_convert.rs  file_ingest.rs  filter.rs  incident.rs  ingest.rs  ingest_forward.rs  investigate.rs  keymap.rs  main.rs  models.rs  mzp_meta.rs  nl_cel.rs  pretty_ingest.rs  properties.rs  run_cmd.rs  script.rs  service.rs  session.rs  setup.rs  shell_attach.rs  shell_forward.rs  stdin_lines.rs  store.rs  test_support.rs  unix_process.rs  update.rs
crates/mizpah/src/agent_hooks/: claude.rs  cursor.rs  forward.rs  mod.rs  shared.rs  state.rs
crates/mizpah/src/api/: auth.rs  mod.rs  routes.rs  static_files.rs  ws.rs
crates/mizpah/src/browser_attach/: cdp.rs  launch.rs  map.rs  mod.rs
crates/mizpah/src/formats/: access_log.rs  bro.rs  generic.rs  json_pack.rs  logfmt.rs  mod.rs  syslog.rs  vendor_specialized.rs  w3c.rs
crates/mizpah/src/formats/packs/: mod.rs  normalize.rs  registry.rs  tests.rs
crates/mizpah/src/hub/: lifecycle.rs  mod.rs  pid.rs
crates/mizpah/src/mcp/: client.rs  format.rs  install.rs  mod.rs  server.rs
crates/mizpah/src/shell_attach/: hooks.rs  mod.rs  state.rs
crates/mizpah/src/sql/: mod.rs
crates/mizpah/src/store/: activity.rs  aggregate.rs  annotate.rs  crypto.rs  ingest.rs  mod.rs  nav.rs  persist.rs  query.rs  redact.rs  spectrogram.rs  spill.rs  trace.rs
crates/mizpah/src/tui/: mod.rs
crates/mizpah/src/update/: apply.rs  check.rs  mod.rs  resume.rs
crates/mizpah/src/util/: fs.rs  mod.rs  path.rs  shell.rs
crates/mizpah/static/: index.html
crates/mizpah/static/assets/: index-1Q6qAnHU.js  index-7w8wglmU.css  index-8B3D5oSv.js  index-B7EtfDv2.js  index-BD5z4hOe.css  index-BQ-UWAwk.js  index-BnICjYiJ.js  index-BrXaLNhb.js  index-Brtmdc-L.js  index-CA3tKa4Q.js  index-CCGWNhva.js  index-CEIUtXtJ.css  index-CQTCOL2B.css  index-CcksSmby.js  index-D-lPhAa3.js  index-D6EuUXDX.css  index-DGUwaUWt.css  index-DXEmjMoo.js  index-Db61EfN3.js  index-Dhe-oUo-.css  index-DykrY-f0.js  index-XBqKsW5o.css  index-YNQkFzMW.js  index-atZZ0Pqo.css  index-l2sSlxnV.js  index-sOW4l7ig.js
crates/mizpah/testdata/: README.md
crates/mizpah/tests/fixtures/: log_entry.json  ws_events.json
docs/: format-implementation-audit.md
scripts/: bump-homebrew-formula.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/scripts/: sync-format-packs.mjs
site/src/: content.config.ts
site/src/components/: AgentSessions.astro  DocNav.astro  FlowDiagram.astro  FlowIcons.astro  FormatsBrowser.tsx  HubDemo.astro  SiteNav.astro  TokenSavingCompare.astro
site/src/components/brainless/claude/: claude-prompt.tsx  claude-thinking.tsx
site/src/components/brainless/codex/: codex-prompt.tsx  codex-working.tsx
site/src/components/brainless/grok/: grok-header.tsx  grok-permission.tsx  grok-prompt.tsx
site/src/components/sessions/: ClaudeMcpSession.tsx  CodexMcpSession.tsx  GrokMcpSession.tsx
site/src/content/docs/: attach.md  auth.md  cel.md  cli.md  development.md  formats.md  install.md  mcp.md  quick-start.md  siem-ingest.md  sql.md  storage-security.md  streaming.md
site/src/layouts/: BaseLayout.astro  DocsLayout.astro
site/src/lib/: demo-log-dialog.ts  demo-logs.ts  nav.ts
site/src/pages/: index.astro
site/src/pages/docs/: [...slug].astro  index.astro
site/src/pages/formats/: index.astro
site/src/styles/: global.css
skills/mizpah/: SKILL.md
skills/mizpah/references/: cel-and-mcp.md
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: cel-query-editor.tsx  filter-search.tsx  incident-dialog.tsx  json-explorer.tsx  json-highlight.tsx  log-detail-dialog.tsx  log-list.tsx  log-row-context-menu.tsx  power-tools-sheet.tsx  property-filter-drawer.tsx  query-editor-dialog.tsx  query-library-panel.tsx  services-dialog.tsx  sql-result-table.tsx  theme-provider.tsx  time-activity-strip.tsx  update-dialog.tsx
web/src/components/ui/: context-menu.tsx  dropdown-menu.tsx  sonner.tsx  wave-text.tsx
web/src/hooks/: mizpah-connection.ts  use-mizpah.ts  use-query-library.ts
web/src/lib/: api-contract.ts  api.ts  cel-lang.ts  cel-recipes.ts  entry-time.ts  filter-from-property.ts  filter-storage.ts  log-format.ts  query-library-storage.ts  time-zoom.ts  types.ts
web/src/styles/: radix-variants.css
