[workspace]
resolver = "2"
members = ["crates/mizpah"]

[workspace.package]
version = "0.20.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ethira-dev/mizpah"
homepage = "https://github.com/ethira-dev/mizpah"
authors = ["Lucas"]
keywords = ["logs", "cli", "json", "observability"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
