[package]
name = "mizpah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "JSON log viewer — pipe logs and inspect them in a web UI"
readme = "../../README.md"
include = [
  "src/**/*",
  "static/**/*",
  "build.rs",
  "Cargo.toml",
]

[[bin]]
name = "mizpah"
path = "src/main.rs"

[[bin]]
name = "mzp"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22.1"
cel = { version = "0.14.0", features = ["json", "regex"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
flate2 = "1.1.9"
futures-util = "0.3"
libc = "0.2"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "2.2.0", features = ["server", "transport-io", "macros", "schemars"] }
rust-embed = { version = "8", features = ["mime-guess"] }
schemars = "1"
self-replace = "1.5.0"
semver = "1.0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "io-std",
  "sync",
  "time",
  "signal",
] }
toml_edit = "0.22"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
