[package]
name = "mizpah"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "JSON log viewer — pipe logs and inspect them in a web UI"
readme = "../../README.md"
include = [
  "src/**/*",
  "static/**/*",
  "formats/**/*",
  "testdata/**/*",
  "build.rs",
  "Cargo.toml",
]

[[bin]]
name = "mizpah"
path = "src/main.rs"

[[bin]]
name = "mzp"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22.1"
cel = { version = "0.14.0", features = ["json", "regex"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
flate2 = "1.1.9"
futures-util = "0.3"
aes-gcm = "0.10"
getrandom = "0.3"
hkdf = "0.13"
hmac = "0.12"
keyring = "3"
libc = "0.2"
open = "5"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls-no-provider", "stream"] }
rmcp = { version = "2.2.0", features = ["server", "transport-io", "macros", "schemars"] }
rust-embed = { version = "8", features = ["mime-guess"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1"
self-replace = "1.5.0"
semver = "1.0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "io-std",
  "sync",
  "time",
  "signal",
  "process",
] }
tokio-tungstenite = "0.29"
toml = "0.8"
toml_edit = "0.25"
toon-format = { version = "0.5.0", default-features = false }
bzip2 = "0.5"
notify = "8"
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
pcre2 = "0.2"
include_dir = "0.7"
evtx = "0.8"
tower-http = { version = "0.7", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
openidconnect = { version = "4", features = ["reqwest", "rustls-tls"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["test-util"] }
